--- a/control.html
+++ b/control.html
@@ -1,8 +1,8 @@
 <script src="flood.js"></script>
 <script>
-var curPass='Q28wMXBlMDI';
+var curPass='';
   var userPrompt=prompt('Username for control panel:');
-  if (userPrompt === 'Unzor'){
+  if (userPrompt === ''){
   var passPrompt=prompt('Password for control panel:');
     if (passPrompt === atob(curPass)){
       alert('Welcome, ' + userPrompt +'!');
